<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg_gradient"
    tools:context=".GameBegin"
    >
    <Button
        android:id="@+id/buStartGame"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5sp"
        android:padding="10dp"
        android:text="@string/buStartGame"
        android:backgroundTint="@color/gold_200"
        android:textColor="@color/blue_900"
        android:textSize="30sp"
        >
    </Button>
    <Button
        android:id="@+id/buShowScore"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5sp"
        android:padding="10dp"
        android:text="@string/buShowScores"
        android:backgroundTint="@color/gold_200"
        android:textColor="@color/blue_900"
        android:textSize="30sp"
        >
    </Button>
    <Button
        android:id="@+id/buRules"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5sp"
        android:padding="10dp"
        android:text="@string/buRules"
        android:backgroundTint="@color/gold_200"
        android:textColor="@color/blue_900"
        android:textSize="30sp"
        >
    </Button>
    <Button
        android:id="@+id/buQuit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:padding="10dp"
        android:text="@string/buQuit"
        android:backgroundTint="@color/grey_300"
        android:textColor="@color/blue_900"
        android:textSize="30sp"
        >
    </Button>
</LinearLayout>