<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg_gradient"
    tools:context=".LoginActivity"
    >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:layout_marginBottom="10sp">
    </TextView>
    <!-- Placeholder for welcome message after login -->
    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gold_300"
        android:textSize="40sp"
        android:layout_marginBottom="30sp">
    </TextView>



    <EditText
        android:id="@+id/userName"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:background="@color/textField"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/userName"
        android:autofillHints="username"
        android:inputType="text"
        android:padding="5dp"
        android:layout_marginVertical="10sp">
    </EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:background="@color/textField"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/password"
        android:padding="5dp"
        android:inputType="textPassword"
        android:layout_marginVertical="10sp">
    </EditText>

    <Button
        android:id="@+id/login"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10sp"
        android:padding="10dp"
        android:text="@string/buLogin"
        android:backgroundTint="@color/grey_300"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:gravity="center">
    </Button>
    <Button
        android:id="@+id/register"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginVertical="10sp"
        android:backgroundTint="@color/grey_300"
        android:text="@string/buRegister"
        android:textColor="@color/black"
        android:textSize="25sp">
    </Button>
</LinearLayout>