<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingVertical="20dp"
    android:background="@drawable/bg_gradient"
    tools:context=".ShowScores">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoresTitle"
        android:textColor="@color/gold_300"
        android:textSize="30sp"
        android:layout_marginBottom="20sp">
    </TextView>
    <TextView
        android:id="@+id/tvScore0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="30dp"
        android:textColor="@color/gold_200"
        android:textSize="25sp"
        android:text="@string/tvScore">
    </TextView>
    <TextView
        android:id="@+id/tvScore1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="30dp"
        android:textColor="@color/gold_200"
        android:textSize="25sp"
        android:text="@string/tvScore">
    </TextView>
    <TextView
        android:id="@+id/tvScore2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="30dp"
        android:textColor="@color/gold_200"
        android:textSize="25sp"
        android:text="@string/tvScore">
    </TextView>
    <TextView
        android:id="@+id/tvScore3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="30dp"
        android:textColor="@color/gold_200"
        android:textSize="25sp"
        android:text="@string/tvScore">
    </TextView>
    <TextView
        android:id="@+id/tvScore4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="30dp"
        android:textColor="@color/gold_200"
        android:textSize="25sp"
        android:text="@string/tvScore">
    </TextView>
    
    <Button
        android:id="@+id/buOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey_300"
        android:onClick="back"
        android:padding="10dp"
        android:text="@string/buBack"
        android:textColor="@color/black"
        android:textSize="25sp">
    </Button>
</LinearLayout>
